@@ -1,3 +1,10 @@
+2007-03-24 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/mcs51/gen.c (saveRegisters, unsaveRegisters): free some bitVects,
+	  (saveRBank, unsaveRBank): don't save bits,
+	  (genFunction, genEndFunction): save bits exactly once, fix bug 1535242
+	* support/regression/tests/bug1535242.c: new, added
+
 2007-03-22 Borut Razem <borut.razem AT siol.net>
 
 	* debugger/mcs51/cmd.c, debugger/mcs51/sdcdb.c:
